2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new tools.

	* z/sauvola_ms_rv/pgm_color_diff.cc,
	* z/sauvola_ms_rv/pgm_local_mean.cc,
	* z/sauvola_ms_rv/ppm_influence_zone_geodesic.cc: New.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename skewness directory and share code between implementations.

	* z/skewness/skewness.cc,
	* z/skewness/skewness2.cc: Move...

	* z/sauvola_ms_rv/skewness.cc,
	* z/sauvola_ms_rv/skewness/skewness2.cc: ... Here.

	* z/sauvola_ms_rv/skewness/integral_browsing_rv.hh: Share code
	between the two implementations.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* z/skewness/skewness2.cc: New.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* z/skewness/skewness.cc: New.

2010-11-25  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix encoding issues in xml_transform.

	* arthur/xml_transform/image_crop.cc,
	* arthur/xml_transform/loader.cc: Explicitly use UTF-8.

2010-11-18  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve image cropping in xml_transform.

	* arthur/xml_transform/image_crop.cc,
	* arthur/xml_transform/image_crop.hh: Load the input image only
	once.

	* arthur/xml_transform/main.cc: Undef MLN_WO_GLOBAL_VARS macro.

	* arthur/xml_transform/xml_transform.pro: Enable
	MLN_WO_GLOBAL_VARS macro.

2010-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* arthur/xml_transform/xml_transform.pro: Define NDEBUG at compile
	time.

2010-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Add missing const references to function arguments.

	* arthur/xml_transform/common.cc,
	* arthur/xml_transform/common.hh,
	* arthur/xml_transform/image_crop.cc,
	* arthur/xml_transform/image_crop.hh,
	* arthur/xml_transform/loader.cc,
	* arthur/xml_transform/loader.hh,
	* arthur/xml_transform/main.cc,
	* arthur/xml_transform/xml_transform.cc,
	* arthur/xml_transform/xml_transform.hh: Here.

2010-08-06  Arthur Crepin-Leblond  <crepin@lrde.epita.fr>

	Open Document bug warning.

	* arthur/xml_transform/README
	* arthur/xml_transform/main.cc